# ruka

./: .gitignore  CMakeLists.txt  Cargo.toml  basics.md  build.zig  build.zig.zon  changes.txt  copyright  ideas.txt  in_progress.txt  license-apache  license-mit  readme.md  test_runner.zig  todo.txt
.github/: FUNDING.yml
.github/workflows/: build.yml  cmake-single-platform.yml  coverage.yml  test.yml
branding/: colours.txt
branding/favicon/: ruka-amber-e89a3c.icns  ruka-berry-a32c43.icns  ruka-emerald-386248.icns
docs/: architecture.md  basics.md  built-ins.md  changes.txt  design-goals.txt  examples.html  grammar.html  grammar.md  highlight.js  ideas.md  ideas.txt  index.html  language_features.md  language_reference.html  language_syntax.md  overview.html  package_structure.md  planned_features.md  playground.js  project_structure.md  reference.html  reference.md  std_lib.md  style.css  todo.md
docs/design/: architecture.md  data-structures.md  roadmap.md
docs/examples/: arrays.ruka  calculator.ruka  combat.ruka  examples.js  fibonacci.ruka  fizzbuzz.ruka  hello-world.ruka  projectile.ruka  ranges-and-chars.ruka
docs/explained examples/basics/: build.ruka
docs/old/: planned_features.md
examples/: basics.ruka  fibonacci.ruka  fundamentals.rx  interface.ruka  linked_list.ruka  result.ruka  string_splitting.ruka  test.rx  tests.ruka
examples/basics/: build.rkml  build.ruka
examples/basics/src/: buffer.rk  buffer.ruka  io.rk  main.ruka  otherStuff.ruka  root.rk  root.ruka
examples/derive/src/: main.ruka  mod.ruka
examples/fibonacci/: fib.amu  fib.gh  main.amu  main.co  main.conjure  main.cosmic  main.gh  main.rx
examples/hello_world/: main.amu  main.co  main.conjure  main.cosmic  main.gh  main.io  main.rex  main.rx  readme.md
examples/idk/: build.rkml
examples/idk/src/: lib.ruka  main.ruka
examples/interfaces/: build.rkml
examples/interfaces/src/: io.ruka  lib.ruka  main.ruka
examples/linked_list/: main.amu  main.gh
examples/more features/: build.ruka  root.ruka
examples/more features/src/: main.ruka  mod.ruka  root.ruka
examples/perceptron/: main.ruka  perceptron.ruka
examples/result/: main.amu  main.gh
examples/string_splitting/: main.amu  main.gh
ideas/: basics.md
ideas/examples/: fibonacci.ruka  hello_world.ruka  interface.ruka  interface_comptime_derive.ruka  linked_list.ruka  methods_records.ruka  patterns.ruka  result.ruka  return.ruka  string_splitting.ruka  tests.ruka
includes/: compiler.h  parser.h  scanner.h
includes/helpers/: buffer.h  position.h  vector.h
old/: language_syntax.md  todo.md
ruka/: go.mod  main.go
ruka-lang.org/: .prettierrc  final-syntax-changes.txt  final_syntax_changes.txt  package.json  playwright.config.ts  svelte.config.js  todo.txt  user-projects-plan.txt  vite.config.ts
ruka-lang.org/src/: app.html
ruka/docs/: architecture.md  data-structures.md  design-philosophy.md
ruka/runners/: test.zig
ruka/zig/: build.zig
ruka/zig-old/: build.zig.zon
runners/: test.zig
selfhosted/: root.ruka
selfhosted/src/: main.ruka  mod.ruka
src/: ArgumentParser.zig  Chrono.zig  Compile.zig  Compiler.zig  Error.zig  Interface.zig  Interpreter.zig  LinearFifo.zig  Parse.zig  Parser.zig  Repl.zig  Ruka.zig  Scanner.zig  Transpor.zig  Transport.zig  chrono.zig  compiler.zig  constants.rs  constants.zig  interface.zig  lib.rs  logging.zig  main.c  main.rs  main.zig  parser.zig  prelude.rs  prelude.zig  root.zig  scanner.zig  templates.rs  transport.zig  util.zig  utilities.zig
src/cli/: cli.zig  constants.rs  constants.zig  logging.zig  mod.rs  parser.zig
src/commandline/: constants.rs  mod.rs
src/compiler/: Unit.zig  compile_process.c  compiler.c  compiler.h  compiler.zig  cprocess.c  error.rs  mod.rs  unit.zig
src/compiling/: compiler.rs
src/generator/: generator.zig
src/helpers/: buffer.c  buffer.h  position.c  position.h  vector.c  vector.h
src/interface/: ArgumentParser.zig  Repl.zig  argumentParser.zig  commandParser.zig  constants.zig  interface.zig  logging.zig
src/interpreter/: mod.rs
src/lib/: chrono.zig  compiler.zig  parser.zig  prelude.zig  root.zig  scanner.zig  transport.zig  utilities.zig
src/parser/: Ast.zig  ast.rs  ast.zig  mod.rs  parse_process.c  parser.h  parser.zig  pprocess.c
src/parsing/: ast.rs
src/ruka/: ArgumentParser.zig  Repl.zig  constants.zig  logging.zig
src/scanner/: Token.zig  asyncs.rs  error.rs  mod.rs  scan_process.c  scanner.c  scanner.h  scanner.zig  sprocess.c  token.c  token.rs  token.zig
src/scanning/: scanner.rs  token.rs
src/utility/: error.rs  mod.rs  position.rs
test/: test.c
test/files/: test.io  test.rx  test1.conjure  test1.rx  test2.co  test2.conjure  test2.cosmic  test2.io  test2.rx  test3.co  test3.conjure  test3.cosmic  test3.gh  test3.rx
test/scanner/: scanner.c  scanner.h  test_scanner.c  test_scanner.h
tests/: test_runner.zig
tests/files/: test2.amu  test2.warp
tst/: test.c
(+225 files in other folders)
