[package]
name = "amuletc"
version = "0.1.0"
description = "Compiler for the Ghoose programming language"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["derive", "env"] }
const_format = "0.2.32"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
